[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pika"
version = "1.0"
description = "pika cli"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
pika = "pika.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]
